Working to modify some history issues I caused for this git.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ dataParse('data_TOP.json'); // 2003 Jun 24 00Z
 //dataParse('data_LBF.json'); // 2003 Jun 23 00Z
 //dataParse('data_TBW.json'); // 2019 Nov 26 00Z
 //dataParse('data_ILX.json'); // 2013 Nov 17 15Z
-//dataParse('data_DNR_Snow.json'); // 2019 Nov 26 00Z
+//dataParse('data_DNR.json'); // 2019 Nov 26 00Z
 //dataParse('data_SkewT.json');// Interactive Skew-T
 
 function dataParse(fileName) {
