--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 <div id="container">
 <div id="mainbox">
+	<p>Moist Adiabats</p>
 	<div>
 	 <label id="fileUpload" for="input-file">Specify a file:</label><br>
 	 <input type="file" id="input-file">
